<resources>
    <string name="app_name">2024.11.27</string>
    <string name="register">Rejestruj konto</string>
    <string name="email">Podaj adres e-mail:</string>
    <string name="password">Podaj haslo:</string>
    <string name="reppassword">Powtórz haslo:</string>
    <string name="submit">Zatwierdź</string>
    <string name="invalid_email">Nieprawidłowy adres e-mail</string>
    <string name="invalid_pass">Hasła się różnią</string>
    <string name="pesel">Autor: 69213742069</string>
    <string name="witaj">Witaj %1$s</string>
    <string name="loggedinas">Zalogowano jako %1$s</string>
    <string name="hello">Witaj w aplikacji</string>
    <string name="logout">Logout</string>
</resources>
