<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.superstrona.a20241127.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="32sp"
            android:background="@color/greenish"
            android:textColor="@color/white"
            />
        <TextView
            android:textColor="@color/grayish"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/email"
            android:labelFor="@+id/email"
            />
        <EditText
            android:id="@+id/email"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_height="52dp"/>
        <TextView
            android:textColor="@color/grayish"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:labelFor="@+id/pass"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/pass"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_height="52dp"/>
        <TextView
            android:textColor="@color/grayish"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:labelFor="@+id/reppassT"
            android:text="@string/reppassword"/>
        <EditText
            android:id="@+id/reppass"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_height="52dp"/>
        <Button
            android:id="@+id/send"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_grayish"
            />
        <TextView
            android:id="@+id/out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="@color/grayish"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>